--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-theme: jekyll-theme-slate
+exclude: [README.md, deploy.sh]
+highlighter: rouge
+linkedin: graceliugw
+email: guyue.liu@gmail.com
+github: Grace-Liu
+googlescholar: 9NPX8KMAAAAJ
